--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,22 @@
-/* You can add global styles to this file, and also import other style files */
+h1 {
+    color: rgb(210, 233, 0);
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 250%
+}
+h2, h3 {
+    color: rgb(208, 255, 0);
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: lighter;
+}
+body {
+    margin: 2em;
+}
+body, input[text], button {
+    color: #888;
+    font-family: Cambria, Georgia;
+}
+
+
+{
+    font-family: Arial, Helvetica, sans-serif;
+}
